syntax = "proto3";
option csharp_namespace = "Web.Api.Core.Grpc";
package Web.Api.Core.Grpc;
import "google/protobuf/duration.proto";
message RefreshToken {
    string Token = 1;
    google.protobuf.Duration Expires = 2;
    int32 UserId = 3;
    bool Active = 4;
    string RemoteIpAddress = 5;
}